// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldSearch is rendered 1`] = `
<eui-form-control-layout
  clear="[object Object]"
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <eui-validatable-control>
    <input
      aria-label="aria-label"
      class="euiFieldSearch euiFieldSearch-isClearable euiFieldSearch-1icons testClass1 testClass2"
      data-test-subj="test subject string"
      id="1"
      name="elastic"
      placeholder="Placeholder"
      type="search"
      value="1"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props append is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
  prepend="Append"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch euiFieldSearch--inGroup"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props fullWidth is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="true"
  icon="search"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch euiFieldSearch--fullWidth"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props isClearable is accepted 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props isClearable is rendered when a value exists 1`] = `
<eui-form-control-layout
  clear="[object Object]"
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch euiFieldSearch-isClearable euiFieldSearch-1icons"
      type="search"
      value="Hello"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props isInvalid is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isinvalid="true"
  isloading="false"
>
  <eui-validatable-control
    isinvalid="true"
  >
    <input
      class="euiFieldSearch euiFieldSearch-isInvalid euiFieldSearch-1icons"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props isLoading is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="true"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch euiFieldSearch-isLoading euiFieldSearch-1icons"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props prepend is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
  prepend="Prepend"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch euiFieldSearch--inGroup"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;
